--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko", lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>
-      <!-- 제목 -->
-    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>LEE's PORTFOLIO</title>
   </head>
+  
   <body>
-    <!-- 컨텐츠 -->
+
+    <nav>
+      <div class="logo">
+        <img src="W_logo.png">
+        <a href="#">JAEYOON LEE</a>
+      </div>
+      <div class="nav-links">
+        <a class="selected" href="index.html">Home</a>
+        <a href="Project.html">Project</a>
+        <a href="Personal-project.html">Personal Project</a>
+        <a href="Work-experience.html">Experience</a>
+        <a href="About.html">About</a>
+      </div>
+    </nav>
+
+    <div class="main">
+      <div class="info">
+        <h1>Hello, I'm Jaeyoon Lee, <br>Software Programmer</br1></h1>
+        <p>Bachelor's degree in Computer Science & Data Science at the University of Wisconsin-Madison.</p>
+        <button>Download Resume</button>
+      </div>
+      <img src="Profile.jpeg">
+    </div>
   </body>
 </html>
