Change Profile Image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>Bachelor's degree in Computer Science & Data Science at the University of Wisconsin-Madison.</p>
         <button>Download Resume</button>
       </div>
-      <img src="Profile.jpeg">
+      <img src="Profile1.jpeg">
     </div>
   </body>
 </html>
