--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="Personal-project.html">Personal Project</a>
         <a href="Work-experience.html">Experience</a>
         <a href="About.html">About</a>
+        <button id="dark-mode-toggle">Darkmode</button>
       </div>
     </nav>
 
@@ -53,4 +54,5 @@
 
 
   </body>
+  <script src="script.js"></script>
 </html>
