Creating Loading Page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
       </div>
     </div>
 
+    <div class="separator">
+      <h4>Project</h4>
+    </div>
 
+    
 
   </body>
   <script src="script.js"></script>
